[package]
name = "anyhash-macros"
version = "0.1.0"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Proc macros for the anyhash crate"
repository = "https://github.com/maia-s/anyhash"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }

[dependencies.syn]
version = "2.0"
default-features = false
features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"]
