[package]
name = "anyhash"
version = "0.1.1"
edition = "2021"
authors = ["Maia S. R."]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Traits and utilities for making hashes of any type"
repository = "https://github.com/maia-s/anyhash"
documentation = "https://docs.rs/anyhash"
keywords = ["hash", "hashing", "generic", "endian", "endian-independent"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]

[features]
std = ["alloc"]
alloc = []
nightly = []

# optional integrations
bnum = ["dep:bnum"]

# required by some hashers
bytemuck = ["dep:bytemuck"]

# hashing algorithms
fnv = []
spooky = ["bytemuck"]
xxh64 = ["bytemuck"]

[dependencies]
anyhash-macros = { version = "0.1", path = "../anyhash-macros" }
bnum = { version = "0.11", optional = true }
bytemuck = { version = "1.14", features = ["min_const_generics"], optional = true }

[package.metadata.docs.rs]
all-features = true
