[package]
name = "hash-t-macros"
version = "0.1.0"
edition = "2021"
authors = ["Maia <66437537+maia-s@users.noreply.github.com>"]
license = "MIT OR Apache-2.0 OR Zlib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }

[dependencies.syn]
version = "2.0"
default-features = false
features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"]
