[package]
name = "hash-t"
version = "0.1.0"
edition = "2021"
authors = ["Maia <66437537+maia-s@users.noreply.github.com>"]

[features]
std = ["alloc"]
alloc = []
nightly = []

# optional integrations
bnum = ["dep:bnum"]

# hashing algorithms
fnv1a = []
spooky = []
xxh64 = []

[dependencies]
hash-t-macros = { path = "../hash-t-macros" }
bnum = { version = "0.10", optional = true }

[package.metadata.docs.rs]
all-features = true
