[package]
name = "hash-t"
version = "0.1.0"
edition = "2021"
authors = ["Maia <66437537+maia-s@users.noreply.github.com>"]
license = "MIT OR Apache-2.0 OR Zlib"

[features]
std = ["alloc"]
alloc = []
nightly = []

# optional integrations
bnum = ["dep:bnum"]

# required by some hashers
bytemuck = ["dep:bytemuck"]

# hashing algorithms
fnv = []
spooky = ["bytemuck"]
xxh64 = ["bytemuck"]

[dependencies]
hash-t-macros = { path = "../hash-t-macros" }
bnum = { version = "0.10", optional = true }
bytemuck = { version = "1.14", features = ["min_const_generics"], optional = true }

[package.metadata.docs.rs]
all-features = true
